--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,10 +1,24 @@
 # Data Source configuration
-hibernate.driver_class=org.postgresql.Driver
-hibernate.connection.url=jdbc:postgresql://localhost:5432/Tennisscoreboard
-hibernate.connection.username=postgres
-hibernate.connection.password=postgres
+hibernate.driver_class=org.h2.Driver
+hibernate.connection.url=jdbc:h2:mem:tennisscore_db;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=-1
+hibernate.connection.username=sa
+hibernate.connection.password=password
+hibernate.hbm2ddl.auto=create
 
 # Hibernate configuration
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
-hibernate.current_session_context_class=thread
+
+# Configuration For Postgresql
+
+## Data Source configuration
+#hibernate.driver_class=org.postgresql.Driver
+#hibernate.connection.url=jdbc:postgresql://localhost:5432/Tennisscoreboard
+#hibernate.connection.username=postgres
+#hibernate.connection.password=postgres
+#hibernate.hbm2ddl.auto=create
+#
+## Hibernate configuration
+#hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#hibernate.show_sql=true
+#hibernate.current_session_context_class=thread
