--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,65 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+# ----------------------------------------------------- Read more ------------------------------------------------------
+# https://git-scm.com/docs/gitignore
+# http://www.gitignore.io/
+# ------------------------------------------ Build Tool Specific Directories -------------------------------------------
+# Maven
+target
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+# Gradle
+.gradle
+**/build/
+!src/**/build/
+
+# ----------------------------------------- IDE Internal Directories And Files -----------------------------------------
+# IntelliJ IDEA
+.idea
+.idea_modules
 *.iml
+*.iws
 *.ipr
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
+*.eml
+.shelf
+out/
+# Eclipse
 .project
+.classpath
 .settings
-.springBeans
-.sts4-cache
+.metadata
+bin/
+# NetBeans
+nb*.xml
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
+# ------------------------------------------ OS Internal Directories And Files -----------------------------------------
+# Mac-specific directories
 .DS_Store
+# Linux KDE-specific directories
+.directory
+
+# -------------------------------------------- Java Run Files and Directories ------------------------------------------
+.*pid*
+hs_err_pid*
+*.log
+
+# ------------------------------------------------------- Secrets ------------------------------------------------------
+# Docker environment file
+.env
+
+# ------------------------------------------------------ Temp files ----------------------------------------------------
+tmp
+temp
+tmp.*
+temp.*
+*.tmp
+*.temp
